--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,12 @@ android {
 
 dependencies {
 
+    implementation 'androidx.compose.material:material:1.5.0-beta02'
+    def nav_version = "2.5.3"
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
     implementation 'com.google.dagger:dagger:2.46.1'
     kapt "com.google.dagger:dagger-compiler:2.46.1"
     def room_version = "2.5.1"
@@ -57,6 +63,7 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
+    implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
